--- a/style.css
+++ b/style.css
@@ -15,4 +15,51 @@
     height: 100px;
     border: 2px solid paleturquoise;
     border-radius: 30px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 45px;
+    color:blueviolet;
+
+
+}
+
+.x::after{
+    content: "x";
+}
+
+.o::after{
+    content: "o";
+}
+
+.disabled{
+    cursor: not-allowed;
+}
+
+.cell:not(.disabled):hover{
+    transform: scale(1.1);
+}
+
+.game-over {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: rgb(0 0 0 / 50%) 0 0 0 9999px;
+}
+
+.game-over-text {
+    position: absolute;
+    top: -200px;
+    font-size: 60px;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
+    transform: translateX(-30%);
+}
+
+.visible {
+    display: block;
 }
